@@ -1,3 +1,14 @@
+2008-04-30  Matthias Wimmer  <m@tthias.eu>
+
+    * jabberd/jabberd.h: removing the xmlnode vattrib functions
+    * jabberd/config.cc: same
+    * jabberd/lib/xmlnode.cc: same
+    * jabberd/lib/jid.cc: same
+    * jabberd/lib/jabberdlib.h: same
+    * jabberd/base/base_load.cc: same
+    * jsm/jsm.cc: same
+    * dnsrv/dnsrv.cc: same
+
 2008-04-29  Matthias Wimmer  <m@tthias.eu>
 
     * jsm/serialization.cc: removing string spool functions, using
